--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>js-intro</h1>
- <script src="main.js"></script> 
+ <script src="main.js"></script>
+ <script src="functions.js"></script>
 </body>
 </html>
