--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h1>js-intro</h1>
- <script src="main.js"></script>
- <script src="functions.js"></script>
+ <!-- <script src="main.js"></script>
+ <script src="functions.js"></script> -->
+ <script src="arrays.js"></script>
 </body>
 </html>
